--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    position: relative;
+    display: inline-block;
+}
+
+.health_timer_container {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 20px;
+}
+
+.health_bar {
+    background-color: yellow;
+    height: 30px;
+    width: 100%;
+}
+
+.timer {
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    flex-shrink: 0;
+}
