--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,46 @@
     padding: 20px;
 }
 
-.health_bar {
+.health_bar_container_right {
+    position: relative;
+    height: 30px;
+    width: 100%;
+}
+
+.health_bar_background_right {
     background-color: yellow;
     height: 30px;
+}
+
+.health_bar_right {
+    position: absolute;
+    background: blue;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.health_bar_container_left {
+    position: relative;
+    height: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.health_bar_background_left {
+    background-color: yellow;
+    height: 30px;
+    width: 100%;
+}
+
+.health_bar_left {
+    position: absolute;
+    background: blue;
+    top: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
 }
 
