Determine winner functionality

--- a/css/style.css
+++ b/css/style.css
@@ -65,4 +65,19 @@
     width: 100px;
     height: 100px;
     flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.winner_label {
+    color: white;
+    position: absolute;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
